--- a/biog-download.html
+++ b/biog-download.html
@@ -15,14 +15,15 @@
       }
 
       h1 {
-        color: #375e97;
+        color: hotpink;
         font-size: 2em;
         font-family: Georgia, 'Times New Roman', Times, serif;
-        border-bottom: 1px solid #375e97;
+        border-bottom: 10px dotted purple;
       }
 
       h2 {
         font-size: 1.5em;
+        font-style: italic;
       }
 
       .job-title {
@@ -37,6 +38,13 @@
 
       a:hover {
         text-decoration: none;
+        color: green;
+      }
+      /* additional changes */
+      ul {
+        background-color: #eeeeee;
+        border: 5px solid purple;
+        padding: 2em;
       }
     </style>
   </head>
